k8s/overlays/development/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tenants-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: tenants.local.suranku
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tenants-service
            port:
              number: 80
